# burncloud-download

./: .gitignore  CLAUDE.md  Cargo.toml  INTEGRATION.md  README.md  TEST_SUMMARY.md
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
doc/error/: types.md
doc/manager/: mod.md
docs/: README.md  lib.md
docs/error/: mod.md
docs/manager/: basic.md  persistent_aria2.md
docs/models/: duplicate_policy.md  duplicate_reason.md  duplicate_result.md  file_identifier.md  mod.md  task_status.md
docs/queue/: mod.md
docs/services/: mod.md
docs/traits/: mod.md
docs/types/: mod.md
docs/utils/: mod.md
examples/: basic_usage.rs  check_database.rs  test_database.rs  test_download.rs  test_functional.rs  test_persistence_bug.rs  test_reliable_download.rs  test_simple_api.rs
migrations/: 001_add_duplicate_detection.sql
schema/: 001_base_schema.sql
specs/001-burncloud-download-task/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-url-bug/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs
src/error/: mod.rs  types.rs
src/manager/: basic.rs  mod.rs  persistent_aria2.rs
src/models/: duplicate_policy.rs  duplicate_reason.rs  duplicate_result.rs  file_identifier.rs  mod.rs  task_status.rs
src/queue/: manager.rs  mod.rs  scheduler.rs
src/services/: duplicate_detector.rs  hash_calculator.rs  mod.rs  task_repository.rs  task_validation.rs
src/traits/: manager.rs  mod.rs
src/types/: mod.rs  progress.rs  status.rs  task.rs
src/utils/: id.rs  mod.rs  url_normalization.rs
tests/: end_to_end_tests.rs  integration_tests.rs  lib.rs  performance_tests.rs
tests/end_to_end/: download_deduplication_tests.rs
tests/integration/: basic_manager_tests.rs  concurrent_duplicate_tests.rs  duplicate_detection_tests.rs  persistent_manager_tests.rs
tests/unit/: duplicate_detector_tests.rs  duplicate_policy_tests.rs  file_identifier_tests.rs  hash_calculation_tests.rs  mod.rs  persistent_aria2_manager_tests.rs  queue_manager_tests.rs  task_status_tests.rs  (+2 more)
(+6 files in other folders)
