[package]
name = "burncloud-download"
version = "0.1.0"
edition = "2021"
description = "Unified download management interface for BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "download", "manager", "async"]
categories = ["development-tools", "asynchronous"]

[dependencies]
# Core types
burncloud-download-types = { path = "../burncloud-download-types" }

# Runtime and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Integration dependencies - required for persistent functionality
burncloud-download-aria2 = { path = "../burncloud-download-aria2" }
burncloud-database-download = { path = "../burncloud-database-download" }

# Duplicate detection dependencies
blake3 = "1.5"
url = "2.5"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"